# venice-media-local

./: .gitignore  Build-Windows.ps1  README.md  Start-Dev.ps1  index.html  package-lock.json  package.json  vite.config.ts
agent-skills/venice-local-gui/: README.md  SKILL.md
agent-skills/venice-local-gui/references/: implementation-notes.md  remote-access-troubleshooting.md  venice-local-gui-request-types.md
config/: phase5h-release-policy.example.json
docs/: phase5h-cold-activation-remediation-report-2026-07-14.md  phase5h-windows-release-policy.md
docs/specs/: phase5h-cold-activation-remediation-2026-07-14.md
schemas/: media-sidecar.v1.schema.json
scripts/: Invoke-Phase5HColdActivation.ps1  Invoke-Phase5HLegacyControlTokenMigration.ps1  phase5h-cold-activation-harness.mjs  phase5h-cold-activation-windows.mjs  phase5h-cold-activation.mjs  phase5h-cold-activation.test.mjs  phase5h-readiness.mjs  phase5h-readiness.test.mjs  provider-contract.test.mjs  provider-cross-contract.test.mjs  readiness-contract.test.mjs  write-build-config.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/provider-kernel/: Cargo.toml
src-tauri/provider-kernel-tests/: Cargo.toml  lib.rs
src-tauri/provider-kernel/src/: lib.rs
src-tauri/src/: capability-manifest.v1.json  main.rs  provider.rs  provider_kernel.rs
