[package]
name = "venice-media-local"
version = "26.6.3"
description = "Local Venice media generation desktop app"
authors = ["Neko Legends"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2.4.2"
tokio = { version = "1", features = ["full"] }

# For the AI Agent Remote Control HTTP API (gated behind the setting)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
