[package]
name = "venice-provider-kernel"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
async-trait = "0.1"
axum = "0.7"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "=0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["test-util"] }
